@@ -1,6 +1,7 @@
 V2.15.9 (Jun 18, 2014)
     * New API "deliver-dict" for delivering dictionaries into DMS
     * Support most popular archive formats including zip, 7z, rar, gzip and etc.
+    * Escape apostrophe char in generated XML property dictionaries
 
 V2.15.8 (May 19, 2014)
     * Allows to sort by T/N/I columns in Translation summary view
